feat: fix adaptive menu bug

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 	<title>Travel</title>
 </head>
 <body>
-	<div class="menu__popup" id="popup">
+	<div class="menu__popup close" id="popup">
 		<div class="menu__popup_close">
 			<img id="close" src="./img/popup_cross.svg" alt="close">
 		</div>
 		<ul class="menu__popup_ul">
-			<li><a href="#preview">How It Works</a></li>
-			<li><a href="#steps">Plan Your Trip</a></li>
-			<li><a href="#destinations">Destinations</a></li>
-			<li><a href="#storyes">Travel Stories</a></li>
-			<li><a href="#">Account</a></li>
-			<li><a href="#social_media">Social Media</a></li>
+			<li><a href="#preview" id="li">How It Works</a></li>
+			<li><a href="#steps" id="li">Plan Your Trip</a></li>
+			<li><a href="#destinations" id="li">Destinations</a></li>
+			<li><a href="#storyes" id="li">Travel Stories</a></li>
+			<li><a href="#" id="li">Account</a></li>
+			<li><a href="#social_media" id="li">Social Media</a></li>
 		</ul>
 	</div>
 	<div class="wrapper">
@@ -188,7 +188,7 @@
 				<div class="footer__container_text">
 					<p>All Rights Reserved © Travel Portal</p>
 				</div>
-				<div class="footer__container_social">
+				<div class="footer__container_social" id="social_media">
 					<ul>
 						<li><a href="https://www.instagram.com/alexey.vladimirof/?igshid=YmMyMTA2M2Y=" target="_blank"><img src="./img/inst.svg" alt="instagram" class="footer__img"></a></li>
 						<li><a href="https://rs.school/js-stage0/" target="_blank"><img src="./img/youtube.svg" alt="youtube" class="footer__img"></a></li>
